fix :: Tuist migration, CFBundleVersion(String), GoogleService Script

--- a/XCConfig/Shared.xcconfig
+++ b/XCConfig/Shared.xcconfig
@@ -3,3 +3,9 @@ OTHER_SWIFT_FLAGS[config=PROD][sdk=*] = $(inherited) -DPROD
 
 ENABLE_BITCODE = NO
 ENABLE_TESTABILITY = true
+
+IPHONEOS_DEPLOYMENT_TARGET = 15.0
+WATCHOS_DEPLOYMENT_TARGET = 9.0
+
+CURRENT_PROJECT_VERSION = 1
+MARKETING_VERSION = 1.2.8
